<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrameLayoutActivity">


    <TextView
        android:text="@string/left_top"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        android:layout_gravity="left|top"
        android:background="@android:color/holo_red_dark" />
    <TextView
        android:text="@string/center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:background="@android:color/holo_orange_dark" />
    <TextView
        android:text="@string/right_bottom"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        android:layout_gravity="right|bottom"
        android:background="@android:color/holo_green_dark" />

</FrameLayout>